backend-gke/k8s/playlists-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playlists-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: playlists-service
  template:
    metadata:
      labels:
        app: playlists-service
    spec:
      containers:
        - name: playlists-service
          image: europe-west1-docker.pkg.dev/mini-spotify-gcp/wavely-repo/playlists-service:latest
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: playlists-service
spec:
  selector:
    app: playlists-service
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
