backend-gke/k8s/songs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: songs-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: songs-service
  template:
    metadata:
      labels:
        app: songs-service
    spec:
      containers:
        - name: songs-service
          image: europe-west1-docker.pkg.dev/mini-spotify-gcp/wavely-repo/songs-service:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: songs-service
spec:
  selector:
    app: songs-service
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
